footer사이즈 수정 및 minmax 적용

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -11,7 +11,7 @@
     	</div>
 
 			<div class="col-md-42 col-sm-42 " style="width: 30.63%">
-				<img src="{% static 'img/main/visual4.jpg' %}" class="img-responsive">
+				<img src="{% static 'img/main/visual4.jpg' %}" class="img-responsive minmax">
 			</div>
 		</div>
 		<div class="col-md-42 col-sm-42">
