--- a/suclinic/templates/footer.html
+++ b/suclinic/templates/footer.html
@@ -1,9 +1,9 @@
 {% load staticfiles %}
 
 <footer>
-	<div class="container-flui col-md-42 no-padding">
+	<div class="container-fluid no-padding">
 		<div class="row">
-			<div class="col-md-42 no-padding bgcolorblk">
+			<div class="col-xs-42 no-padding bgcolorblk">
 			<ul>
 				<li class="col-md-8"><img src="{% static 'img/footer_1.png' %}" class="img-responsive minmax"></li>
 				<li class="col-md-8"><img src="{% static 'img/footer_2.png' %}" class="img-responsive minmax"></li>
