--- a/suclinic/templates/base.html
+++ b/suclinic/templates/base.html
@@ -1,11 +1,11 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title></title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
 
@@ -14,22 +14,29 @@
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
+  <!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	<![endif]-->
-</head>
-<body>
+		<![endif]-->
+	</head>
 
-	{% block content %}
-	{% endblock %}
+	<body>
 
-	{% include "footer.html" %}
+		{% include "left.navbar.html" %}
 
-	{% include "javascript.html" %}
 
-	{% block javascript %}
-	{% endblock %}
+		<div class="col-sm-35">
+			{% block content %}
+			{% endblock %}
+			{% include "footer.html" %}
+		</div>
 
-</body>
-</html>
+		{% include "right.navbar.html" %}
+
+		{% include "javascript.html" %}
+
+		{% block javascript %}
+		{% endblock %}
+	</body>
+
+	</html>
