--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,93 +1,77 @@
 html, body {
-  width: 100%;
-}
+  width: 100%; }
 
 .no-padding {
-  padding: 0;
-}
+  padding: 0; }
 
 .no-padding-l {
-  padding: 0;
-}
+  padding: 0; }
 
 .no-padding-r {
-  padding: 0;
-}
+  padding: 0; }
 
 .no-padding-lr {
-  padding: 0;
-}
+  padding: 0; }
 
 .no-padding-t {
-  padding: 0;
-}
+  padding: 0; }
 
 .no-padding-b {
-  padding: 0;
-}
+  padding: 0; }
 
 .no-padding-tb {
-  padding: 0;
-}
+  padding: 0; }
 
 .margintop30 {
-  margin-top: 30px;
-}
+  margin-top: 30px; }
 
 .margintop50 {
-  margin-top: 50px;
-}
+  margin-top: 50px; }
 
 .margintop60 {
-  margin-top: 60px;
-}
+  margin-top: 60px; }
 
 .margintop80 {
-  margin-top: 80px;
-}
+  margin-top: 80px; }
 
 .marginauto {
   margin-left: auto;
-  margin-right: auto;
-}
+  margin-right: auto; }
 
 .bgcolorblk {
-  background-color: #565656;
-}
+  background-color: #565656; }
 
 .img-responsive.minmax {
   min-width: 100%;
   position: relative;
-  min-height: 1px;
-}
+  min-height: 1px; }
 
 .main div {
-  padding: 0px;
-}
+  padding: 0px; }
 .main img {
-  padding: 0px;
-}
+  padding: 0px; }
 
 footer ul {
   padding: 0px;
   list-style-type: none;
-  display: inline;
-}
+  display: inline; }
 
 .img-responsive {
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
+@media screen and (min-width: 768px) {
+  .md69 {
+    width: 69.37%; }
+
+  .md30 {
+    width: 30.63%; } }
 .navbar-default {
-  background-color: white;
-}
+  background-color: white; }
 
 @media (max-width: 768px) {
   .navbar-fixed-side {
     margin-left: -15px;
-    margin-right: -15px;
-  }
-}
+    margin-right: -15px; } }
 @media (min-width: 768px) {
   .navbar-fixed-side {
     position: fixed;
@@ -97,136 +81,105 @@ footer ul {
     overflow: auto;
     border-top-width: 0;
     border-bottom-width: 0;
-    border-radius: 0;
-  }
-  .navbar-fixed-side .container, .navbar-fixed-side .container-fluid {
-    width: auto;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .navbar-fixed-side .navbar-header {
-    float: none;
-  }
-  .navbar-fixed-side .navbar-brand {
-    height: auto;
-  }
-  .navbar-fixed-side > .container .navbar-brand, .navbar-fixed-side > .container-fluid .navbar-brand {
-    margin-left: 0;
-  }
-  .navbar-fixed-side .navbar-collapse {
-    width: 100%;
-    border-top: 1px solid #e7e7e7;
-  }
-  .navbar-fixed-side .navbar-nav {
-    float: none;
-    margin: 0 -15px;
-  }
-  .navbar-fixed-side .navbar-nav > li {
-    float: none;
-  }
-  .navbar-fixed-side .navbar-nav > li > a {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border-bottom: 1px solid #e7e7e7;
-  }
-  .navbar-fixed-side .navbar-form {
-    margin: 0;
-    margin-left: -15px;
-    margin-right: -15px;
-    padding: 10px 15px;
-    border-bottom: 1px solid #e7e7e7;
-  }
-  .navbar-fixed-side .navbar-text {
-    float: none;
-    margin-left: 0;
-    margin-right: 0;
-  }
-  .navbar-fixed-side .navbar-left,
-  .navbar-fixed-side .navbar-right {
-    float: none !important;
-  }
-  .navbar-fixed-side .navbar-nav .dropdown-menu {
-    position: static;
-    float: none;
-    width: auto;
-    margin-top: 0;
-    background-color: transparent;
-    border: 0;
-    box-shadow: none;
-    border-bottom: 1px solid #e7e7e7;
-  }
-  .navbar-fixed-side .navbar-nav .dropdown-menu > li > a,
-  .navbar-fixed-side .navbar-nav .dropdown-menu .dropdown-header {
-    padding: 5px 15px 5px 25px;
-  }
-  .navbar-fixed-side .navbar-nav .dropdown-menu > li > a {
-    line-height: 20px;
-    color: #777;
-  }
-  .navbar-fixed-side .navbar-nav .dropdown-menu > li > a:hover, .navbar-fixed-side .navbar-nav .dropdown-menu > li > a:focus {
-    background-image: none;
-  }
-  .navbar-fixed-side .navbar-nav .dropdown-menu > .active > a {
-    background-color: #e7e7e7;
-    color: #555;
-  }
-  .navbar-fixed-side .navbar-nav > li > a:hover, .navbar-fixed-side .navbar-nav > li > a:focus,
-  .navbar-fixed-side .navbar-nav .dropdown-menu > li > a:hover,
-  .navbar-fixed-side .navbar-nav .dropdown-menu > li > a:focus {
-    background-color: #f0f0f0;
-    color: #333;
-  }
-  .navbar-fixed-side .dropdown > .dropdown-toggle,
-  .navbar-fixed-side .dropdown-menu > .dropdown-header {
-    background-color: transparent !important;
-    color: #9d9d9d !important;
-    cursor: default;
-    font-size: 0.8em;
-    text-transform: uppercase;
-    border-bottom: none;
-    padding-bottom: 0;
-  }
-  .navbar-fixed-side .dropdown-toggle .caret {
-    display: none;
-  }
-  .navbar-fixed-side .dropdown-menu {
-    display: block;
-  }
-  .navbar-fixed-side.navbar-inverse .navbar-collapse,
-  .navbar-fixed-side.navbar-inverse .navbar-nav > li > a,
-  .navbar-fixed-side.navbar-inverse .navbar-form,
-  .navbar-fixed-side.navbar-inverse .navbar-nav .dropdown-menu {
-    border-color: #363636;
-  }
-  .navbar-fixed-side.navbar-inverse .divider {
-    background-color: #363636;
-  }
-  .navbar-fixed-side.navbar-inverse .navbar-nav .dropdown-menu > li > a {
-    color: #9d9d9d;
-  }
-  .navbar-fixed-side.navbar-inverse .navbar-nav .dropdown-menu > .active > a {
-    background-color: #090909;
-    color: #fff;
-  }
-  .navbar-fixed-side.navbar-inverse .navbar-nav > li:not(.active) > a:hover, .navbar-fixed-side.navbar-inverse .navbar-nav > li:not(.active) > a:focus,
-  .navbar-fixed-side.navbar-inverse .navbar-nav .dropdown-menu > li:not(.active) > a:hover,
-  .navbar-fixed-side.navbar-inverse .navbar-nav .dropdown-menu > li:not(.active) > a:focus {
-    background-color: #2f2f2f;
-    color: #fff;
-  }
-  .navbar-fixed-side.navbar-inverse .dropdown > .dropdown-toggle {
-    color: #777777 !important;
-  }
-}
+    border-radius: 0; }
+    .navbar-fixed-side .container, .navbar-fixed-side .container-fluid {
+      width: auto;
+      padding-left: 0;
+      padding-right: 0; }
+    .navbar-fixed-side .navbar-header {
+      float: none; }
+    .navbar-fixed-side .navbar-brand {
+      height: auto; }
+    .navbar-fixed-side > .container .navbar-brand, .navbar-fixed-side > .container-fluid .navbar-brand {
+      margin-left: 0; }
+    .navbar-fixed-side .navbar-collapse {
+      width: 100%;
+      border-top: 1px solid #e7e7e7; }
+    .navbar-fixed-side .navbar-nav {
+      float: none;
+      margin: 0 -15px; }
+      .navbar-fixed-side .navbar-nav > li {
+        float: none; }
+        .navbar-fixed-side .navbar-nav > li > a {
+          padding-top: 15px;
+          padding-bottom: 15px;
+          border-bottom: 1px solid #e7e7e7; }
+    .navbar-fixed-side .navbar-form {
+      margin: 0;
+      margin-left: -15px;
+      margin-right: -15px;
+      padding: 10px 15px;
+      border-bottom: 1px solid #e7e7e7; }
+    .navbar-fixed-side .navbar-text {
+      float: none;
+      margin-left: 0;
+      margin-right: 0; }
+    .navbar-fixed-side .navbar-left,
+    .navbar-fixed-side .navbar-right {
+      float: none !important; }
+    .navbar-fixed-side .navbar-nav .dropdown-menu {
+      position: static;
+      float: none;
+      width: auto;
+      margin-top: 0;
+      background-color: transparent;
+      border: 0;
+      box-shadow: none;
+      border-bottom: 1px solid #e7e7e7; }
+      .navbar-fixed-side .navbar-nav .dropdown-menu > li > a,
+      .navbar-fixed-side .navbar-nav .dropdown-menu .dropdown-header {
+        padding: 5px 15px 5px 25px; }
+      .navbar-fixed-side .navbar-nav .dropdown-menu > li > a {
+        line-height: 20px;
+        color: #777; }
+        .navbar-fixed-side .navbar-nav .dropdown-menu > li > a:hover, .navbar-fixed-side .navbar-nav .dropdown-menu > li > a:focus {
+          background-image: none; }
+      .navbar-fixed-side .navbar-nav .dropdown-menu > .active > a {
+        background-color: #e7e7e7;
+        color: #555; }
+    .navbar-fixed-side .navbar-nav > li > a:hover, .navbar-fixed-side .navbar-nav > li > a:focus,
+    .navbar-fixed-side .navbar-nav .dropdown-menu > li > a:hover,
+    .navbar-fixed-side .navbar-nav .dropdown-menu > li > a:focus {
+      background-color: #f0f0f0;
+      color: #333; }
+    .navbar-fixed-side .dropdown > .dropdown-toggle,
+    .navbar-fixed-side .dropdown-menu > .dropdown-header {
+      background-color: transparent !important;
+      color: #9d9d9d !important;
+      cursor: default;
+      font-size: 0.8em;
+      text-transform: uppercase;
+      border-bottom: none;
+      padding-bottom: 0; }
+    .navbar-fixed-side .dropdown-toggle .caret {
+      display: none; }
+    .navbar-fixed-side .dropdown-menu {
+      display: block; }
+    .navbar-fixed-side.navbar-inverse .navbar-collapse,
+    .navbar-fixed-side.navbar-inverse .navbar-nav > li > a,
+    .navbar-fixed-side.navbar-inverse .navbar-form,
+    .navbar-fixed-side.navbar-inverse .navbar-nav .dropdown-menu {
+      border-color: #363636; }
+    .navbar-fixed-side.navbar-inverse .divider {
+      background-color: #363636; }
+    .navbar-fixed-side.navbar-inverse .navbar-nav .dropdown-menu > li > a {
+      color: #9d9d9d; }
+    .navbar-fixed-side.navbar-inverse .navbar-nav .dropdown-menu > .active > a {
+      background-color: #090909;
+      color: #fff; }
+    .navbar-fixed-side.navbar-inverse .navbar-nav > li:not(.active) > a:hover, .navbar-fixed-side.navbar-inverse .navbar-nav > li:not(.active) > a:focus,
+    .navbar-fixed-side.navbar-inverse .navbar-nav .dropdown-menu > li:not(.active) > a:hover,
+    .navbar-fixed-side.navbar-inverse .navbar-nav .dropdown-menu > li:not(.active) > a:focus {
+      background-color: #2f2f2f;
+      color: #fff; }
+    .navbar-fixed-side.navbar-inverse .dropdown > .dropdown-toggle {
+      color: #777777 !important; } }
 .navbar-fixed-side.right-side {
-  background-color: black;
-}
-@media (min-width: 768px) {
-  .navbar-fixed-side.right-side .navbar-nav > li > a {
-    padding-left: 0px;
-    padding-right: 0px;
-    border-bottom: 1px solid gray;
-  }
-}
+  background-color: black; }
+  @media (min-width: 768px) {
+    .navbar-fixed-side.right-side .navbar-nav > li > a {
+      padding-left: 0px;
+      padding-right: 0px;
+      border-bottom: 1px solid gray; } }
 
 /*# sourceMappingURL=style.css.map */
