--- a/static/scss/_main.scss
+++ b/static/scss/_main.scss
@@ -1,3 +1,12 @@
 .img-responsive {
 	margin: 0 auto;
 }
+
+@media screen and (min-width:768px){
+	.md69{
+		width:69.37%;
+	}
+	.md30{
+		width:30.63%;
+	}
+}
