--- a/suclinic/templates/footer.html
+++ b/suclinic/templates/footer.html
@@ -3,15 +3,28 @@
 <footer>
 	<div class="container-fluid no-padding">
 		<div class="row">
-			<div class="col-xs-42 no-padding bgcolorblk">
+			<div class="col-sm-42 hidden-xs no-padding bgcolorblk">
 			<ul>
-				<li class="col-md-8"><img src="{% static 'img/footer_1.png' %}" class="img-responsive minmax"></li>
-				<li class="col-md-8"><img src="{% static 'img/footer_2.png' %}" class="img-responsive minmax"></li>
-				<li class="col-md-8"><a href="#"><img src="{% static 'img/footer_3.png' %}" class="img-responsive minmax"></a></li>
-				<li class="col-md-8"><a href="#"><img src="{% static 'img/footer_4.png' %}" class="img-responsive minmax"></a></li>
-				<li class="col-md-10"><img src="{% static 'img/footer_5.png' %}" class="img-responsive minmax"></li>
+				<li class="col-sm-8"><img src="{% static 'img/footer_1.png' %}" class="img-responsive minmax"></li>
+				<li class="col-sm-8"><img src="{% static 'img/footer_2.png' %}" class="img-responsive minmax"></li>
+				<li class="col-sm-8 "><a href="#"><img src="{% static 'img/footer_3.png' %}" class="img-responsive minmax"></a></li>
+				<li class="col-sm-8 "><a href="#"><img src="{% static 'img/footer_4.png' %}" class="img-responsive minmax"></a></li>
+				<li class="col-sm-10"><img src="{% static 'img/footer_5.png' %}" class="img-responsive minmax"></li>
 			</ul>
 			</div>
+
+			<div class="col-xs-42 visible-xs no-padding bgcolorblk" style="padding-top:20px; padding-bottom:20px; display: none;">
+				<div class="col-xs-21" style="border-right:1px solid gray;">
+					<img src="{% static 'img/footer_m_1.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
+					<img src="{% static 'img/footer_m_3.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
+				</div>
+				<div class="col-xs-21">
+					<img src="{% static 'img/footer_m_2.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
+					<img src="{% static 'img/footer_m_4.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
+				</div>
+				<div class="col-xs-38" style="border-top:1px solid gray; margin-left:15px; margin-right:15px; margin-top:10px;">
+					<img src="{% static 'img/footer_m_5.jpg' %}" class="img-responsive minmax no-padding">
+				</div>
 		</div>
 	</div>
 
