네비바 중간 커밋

--- a/suclinic/templates/left.navbar.html
+++ b/suclinic/templates/left.navbar.html
@@ -15,35 +15,35 @@
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav">
-							<li class="active">
-								<a href="./">병원 소개<span style="float: right">></span></a>
+							<li class="">
+								<a href="./" id="intro">병원 소개<span style="float: right">></span></a>
 							</li>
 							<li class="">
-								<a href="./">기미/잡티/화이트닝</a>
+								<a href="./" id="whitening">기미/잡티/화이트닝</a>
 							</li>
 							<li class="">
-								<a href="./">필링/재생</a>
+								<a href="./" id="peeling">필링/재생</a>
 							</li>
 							<li class="">
-								<a href="./">흉터/모공/튼살치료</a>
+								<a href="./" id="scar">흉터/모공/튼살치료</a>
 							</li>
 							<li class="">
-								<a href="./">필러/보톡스</a>
+								<a href="./" id="botox">필러/보톡스</a>
 							</li>
 							<li class="">
-								<a href="./">쁘띠/동안시술</a>
+								<a href="./" id="young">쁘띠/동안시술</a>
 							</li>
 							<li class="">
-								<a href="./">윤곽/리프팅</a>
+								<a href="./" id="lifting">윤곽/리프팅</a>
 							</li>
 							<li class="">
-								<a href="./">여드름</a>
+								<a href="./" id="pimple">여드름</a>
 							</li>
 							<li class="">
-								<a href="./">비만/체형관리</a>
+								<a href="./" id="fat">비만/체형관리</a>
 							</li>
 							<li class="">
-								<a href="./">커뮤니티</a>
+								<a href="./" id="community">커뮤니티</a>
 							</li>
 					</ul>
 				</div>
