--- a/suclinic/templates/right.navbar.html
+++ b/suclinic/templates/right.navbar.html
@@ -6,7 +6,7 @@
 					<div class="collapse navbar-collapse">
 
 						<ul class="nav navbar-nav">
-						<li style="margin-top: 20px;"><a href="#"><img src="{% static 'img/right_top.png' %}" class="img-responsive"></a></li>
+						<li style="margin-top: 20px;"><a href="#" id="top"><img src="{% static 'img/right_top.png' %}" class="img-responsive"></a></li>
 						<li style="color: white;"><a href="#">JOIN</a></li>
 						<li style="color: white;"><a href="#">LOG IN</a></li>
 						<li><a href="#"><img src="{% static 'img/right_tel.png' %}" class="img-responsive"></a></li>
