--- a/suclinic/templates/base.html
+++ b/suclinic/templates/base.html
@@ -25,7 +25,7 @@
 		{% include "left.navbar.html" %}
 
 
-		<div class="col-sm-35">
+		<div class="col-md-35">
 			{% block content %}
 			{% endblock %}
 			{% include "footer.html" %}
