--- a/suclinic/templates/right.navbar.html
+++ b/suclinic/templates/right.navbar.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-		<div class="col-sm-2">
+		<div class="col-md-2 hidden-xs hidden-sm">
 			<nav class="navbar navbar-default navbar-fixed-side right-side text-center">
 				<div class="container">
 					<div class="collapse navbar-collapse">
