--- a/suclinic/templates/left.navbar.html
+++ b/suclinic/templates/left.navbar.html
@@ -1,17 +1,22 @@
 {% load staticfiles %}
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-sm-5">
+		<div class="col-md-5">
 			<nav class="navbar navbar-default navbar-fixed-side">
-				<div class="container">
-					<div class="navbar-header">
-						<button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse">
+				<div class="container-fluid">
+					<div class="navbar-header" style="text-align: center;">
+						<button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse" style="float: left; width: 40px;padding: 0; border: none; margin: 7px;">
 							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
+							<img src="{% static 'img/icon-bar.png' %}" class="img-responsive">
 						</button>
-						<a class="navbar-brand no-padding" href="{% url 'main:main' %}" style="margin-bottom: 30px;"><img src="{% static 'img/logo.png' %}" class="img-responsive"></a>
+						<div style="text-align: center;margin: 0 auto;display: inline-block;">
+							<a href="./" class="navbar-brand no-padding">
+								<img src="{% static 'img/logo.png' %}" style="width:140px; height:auto;">
+							</a>
+						</div>
+						<a href="tel:82+3027675" style="float: right; width: 40px; margin: 7px;">
+							<img src="{% static 'img/tel-icon.png' %}" class="img-responsive hidden-md hidden-lg">
+						</a>
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav">
