--- a/main/templates/detailpage.html
+++ b/main/templates/detailpage.html
@@ -3,8 +3,12 @@
 {% block content %}
 <div class="container-fluid">
 	<div class="col-sm-38 col-sm-offset-2 col-xs-42" style="border-bottom: 3px solid black; text-align: center; margin-top: 50px;">
-		<div style="font-size: 35pt;">미백 레가토</div>
-		<div style="font-size: 13pt;margin-bottom: 30px;">기미/잡티/화이트닝</div>
+		<div style="font-size: 35pt;">
+		{% block semi_title %}{% endblock %}
+		</div>
+		<div style="font-size: 13pt;margin-bottom: 30px;">
+		기미/잡티/화이트닝
+		</div>
 	</div>
 
 	<div class="col-sm-38 col-sm-offset-2 col-xs-42" style="border-left: 1px solid lightgray; border-right: 1px solid lightgray;">
