--- a/main/templates/whitening/whitening.html
+++ b/main/templates/whitening/whitening.html
@@ -1,5 +1,9 @@
-{% extends "detailpage.html" %}
+{% extends "../detailpage.html" %}
 {% load staticfiles %}
+
+{% block semi_title %}
+미백 레가토
+{% endblock %}
 
 {% block main %}
 	<img src="{% static 'img/whitening/legato1.jpeg' %}" class="img-responsive">
