화이트닝 컨텐츠에 마진 추가

--- a/main/templates/detailpage.html
+++ b/main/templates/detailpage.html
@@ -12,16 +12,16 @@
 	</div>
 
 	<div class="col-sm-38 col-sm-offset-2 col-xs-42" style="border-left: 1px solid lightgray; border-right: 1px solid lightgray;">
-		<div class="row hidden-xs" style="margin-top: 60px; margin-bottom: 60px;">
+		<div class="row hidden-xs margintop60 marginb60">
 		{% block main %} {% endblock %}
 		</div>
-		<div class="row visible-xs">
+		<div class="row visible-xs margintop60 marginb60">
 		{% block mainsm %} {% endblock %}
 		</div>
-		<div class="row hidden-xs" style="margin-bottom: 60px;">
+		<div class="row hidden-xs margintop60 marginb60">
 		{% block detail %} {% endblock %}
 		</div>
-		<div class="row visible-xs">
+		<div class="row visible-xs margintop60 marginb60">
 		{% block detailsm %} {% endblock %}
 		</div>
 
