--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -45,6 +45,18 @@ html, body{
 	margin-top: 80px;
 }
 
+.marginb30{
+	margin-bottom:30px;
+}
+
+.marginb60{
+	margin-bottom:60px;
+}
+
+.marginb80{
+	margin-bottom:80px;
+}
+
 .marginauto{
 	margin-left:auto;
 	margin-right:auto;
