--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,15 @@ html, body {
 .margintop80 {
   margin-top: 80px; }
 
+.marginb30 {
+  margin-bottom: 30px; }
+
+.marginb60 {
+  margin-bottom: 60px; }
+
+.marginb80 {
+  margin-bottom: 80px; }
+
 .marginauto {
   margin-left: auto;
   margin-right: auto; }
