--- a/main/templates/whitening/jade.html
+++ b/main/templates/whitening/jade.html
@@ -5,6 +5,10 @@
 백옥 주사
 {% endblock %}
 
+{% block sub_title %}
+기미/잡티/화이트닝
+{% endblock %}
+
 {% block main %}
 	<img src="{% static 'img/whitening/jade1.jpg' %}" class="img-responsive">
 {% endblock %}
