--- a/main/templates/whitening/laser.html
+++ b/main/templates/whitening/laser.html
@@ -5,6 +5,10 @@
 레이저 토닝
 {% endblock %}
 
+{% block sub_title %}
+기미/잡티/화이트닝
+{% endblock %}
+
 {% block main %}
 	<img src="{% static 'img/whitening/laser1.jpg' %}" class="img-responsive">
 {% endblock %}
