--- a/main/templates/whitening/targeting.html
+++ b/main/templates/whitening/targeting.html
@@ -5,6 +5,10 @@
 타겟팅
 {% endblock %}
 
+{% block sub_title %}
+기미/잡티/화이트닝
+{% endblock %}
+
 {% block main %}
 	<img src="{% static 'img/whitening/targeting1.jpg' %}" class="img-responsive">
 {% endblock %}
