--- a/main/templates/whitening/whitening.html
+++ b/main/templates/whitening/whitening.html
@@ -5,6 +5,10 @@
 미백 레가토
 {% endblock %}
 
+{% block sub_title %}
+기미/잡티/화이트닝
+{% endblock %}
+
 {% block main %}
 	<img src="{% static 'img/whitening/legato1.jpeg' %}" class="img-responsive">
 {% endblock %}
