이미지 크고 작을 때 패딩 조정

--- a/main/templates/detailpage.html
+++ b/main/templates/detailpage.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container-fluid no-padding-xs">
 	<div class="col-sm-38 col-sm-offset-2 col-xs-42 content-title margintop50">
 		<div class="semi_title">
 		{% block semi_title %}{% endblock %}
