--- a/main/templates/peeling/aqua.html
+++ b/main/templates/peeling/aqua.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/peeling/aqua1.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/peeling/aqua1.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block mainsm %}
@@ -19,7 +19,7 @@
 
 
 {% block detail %}
-	<img src="{% static 'img/peeling/aqua2.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/peeling/aqua2.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block detailsm %}
