--- a/main/templates/whitening/laser.html
+++ b/main/templates/whitening/laser.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/whitening/laser1.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/whitening/laser1.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block mainsm %}
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block detail %}
-	<img src="{% static 'img/whitening/laser2.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/whitening/laser2.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block detailsm %}
