--- a/main/templates/scar/legato.html
+++ b/main/templates/scar/legato.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/scar/legato1.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/scar/legato1.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block mainsm %}
@@ -19,7 +19,7 @@
 
 
 {% block detail %}
-	<img src="{% static 'img/scar/legato2.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/scar/legato2.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block detailsm %}
