--- a/main/templates/whitening/whitening.html
+++ b/main/templates/whitening/whitening.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/whitening/legato1.jpeg' %}" class="img-responsive">
+	<img src="{% static 'img/whitening/legato1.jpeg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block mainsm %}
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block detail %}
-	<img src="{% static 'img/whitening/legato2.jpeg' %}" class="img-responsive">
+	<img src="{% static 'img/whitening/legato2.jpeg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block detailsm %}
