--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -62,6 +62,19 @@ html, body{
 	margin-right:auto;
 }
 
+.no-padding-xs{
+	@media (max-width:767px){
+		padding-left:0px;
+		padding-right:0px;
+	}
+}
+
+.img-responsive.minmax {
+	min-width: 100%;
+	position: relative;
+	min-height: 1px;
+}
+
 .bgcolorblk{
 	background-color: $footer-bg;
 }
