오시는 길 추가

--- a/main/templates/detailpage.html
+++ b/main/templates/detailpage.html
@@ -18,6 +18,9 @@
 		<div class="row visible-xs margintop60 marginb60">
 		{% block mainsm %} {% endblock %}
 		</div>
+		<div class="row margintop30 marginb30">
+		{% block common %} {% endblock %}
+		</div>
 		<div class="row hidden-xs margintop60 ">
 		{% block detail %} {% endblock %}
 		</div>
