sub title 수정 및 마진 수정

--- a/main/templates/detailpage.html
+++ b/main/templates/detailpage.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container-fluid no-padding-xs">
-	<div class="col-sm-38 col-sm-offset-2 col-xs-42 content-title margintop50">
+	<div class="col-sm-38 col-sm-offset-2 col-xs-42 content-title margintop50 margintop10-xs">
 		<div class="semi_title">
 		{% block semi_title %}{% endblock %}
 		</div>
@@ -15,13 +15,13 @@
 		<div class="row hidden-xs margintop60 marginb60">
 		{% block main %} {% endblock %}
 		</div>
-		<div class="row visible-xs margintop60 marginb60">
+		<div class="row visible-xs margintop30-xs marginb15">
 		{% block mainsm %} {% endblock %}
 		</div>
 		<div class="row hidden-xs margintop60 ">
 		{% block detail %} {% endblock %}
 		</div>
-		<div class="row visible-xs margintop60">
+		<div class="row visible-xs margintop20-xs">
 		{% block detailsm %} {% endblock %}
 		</div>
 
