--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html, body {
   width: 100%; }
 
@@ -52,6 +53,24 @@ html, body {
     padding-left: 0px;
     padding-right: 0px; } }
 
+@media (max-width: 767px) {
+  .margintop30, .margintop50, .margintop60, .margintop80 {
+    margin-top: 0px; }
+
+  .margintop50-xs {
+    margin-top: 20px; }
+
+  .margintop30-xs {
+    margin-top: 30px; }
+
+  .margintop40-xs {
+    margin-top: 40px; }
+
+  .margintop20-xs {
+    margin-top: 20px; }
+
+  .margintop10-xs {
+    margin-top: 10px; } }
 .img-responsive.minmax {
   min-width: 100%;
   position: relative;
@@ -61,11 +80,17 @@ html, body {
   background-color: #565656; }
 
 .content-title {
-  text-align: center; }
+  text-align: center;
+  /* 화면 크기 1872 이상 일때, 고해상도 노트북 이상 일 때 설정*/ }
   .content-title .semi_title {
     font-size: 35pt; }
   .content-title .sub_title {
     font-size: 13pt; }
+  @media screen and (max-width: 480px) {
+    .content-title .semi_title {
+      font-size: 23pt; }
+    .content-title .sub_title {
+      font-size: 9pt; } }
 
 .content-border {
   border-top: 3px solid black;
