--- a/main/templates/peeling/celebrity.html
+++ b/main/templates/peeling/celebrity.html
@@ -6,11 +6,11 @@
 {% endblock %}
 
 {% block sub_title %}
-HOME > 필링/재생 > 연예인필
+HOME > 필링/재생 > 연예인
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/peeling/celebrity1.jpg' %}" class="img-responsive minmax" >
+	<img src="{% static 'img/peeling/celebrity1.jpg' %}" class="img-responsive" >
 {% endblock %}
 
 {% block mainsm %}
@@ -19,7 +19,7 @@ HOME > 필링/재생 > 연예인필
 
 
 {% block detail %}
-	<img src="{% static 'img/peeling/celebrity2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/peeling/celebrity2.jpg' %}" class="img-responsive">
 {% endblock %}
 
 {% block detailsm %}
