--- a/main/templates/peeling/latte.html
+++ b/main/templates/peeling/latte.html
@@ -10,7 +10,7 @@ HOME > 필링/재생 > 라떼필
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/peeling/latte1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/peeling/latte1.jpg' %}" class="img-responsive">
 {% endblock %}
 
 {% block mainsm %}
@@ -19,7 +19,7 @@ HOME > 필링/재생 > 라떼필
 
 
 {% block detail %}
-	<img src="{% static 'img/peeling/latte2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/peeling/latte2.jpg' %}" class="img-responsive">
 {% endblock %}
 
 {% block detailsm %}
