--- a/main/templates/detailpage.html
+++ b/main/templates/detailpage.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container-fluid no-padding-xs">
-	<div class="col-sm-38 col-sm-offset-2 col-xs-42 content-title margintop50 margintop10-xs">
+	<div class="col-lg-42 col-lg-offset-0 col-sm-38 col-sm-offset-2 col-xs-42 content-title margintop50 margintop10-xs">
 		<div class="semi_title">
 		{% block semi_title %}{% endblock %}
 		</div>
@@ -11,7 +11,7 @@
 		</div>
 	</div>
 
-	<div class="col-sm-38 col-sm-offset-2 col-xs-42 content-border marginb60">
+	<div class="col-lg-24 col-lg-offset-9 col-sm-38 col-sm-offset-2 col-xs-42 content-border marginb60" style="max-width: 1300px;">
 		<div class="row hidden-xs margintop60 marginb60">
 		{% block main %} {% endblock %}
 		</div>
