--- a/main/templates/peeling/aqua.html
+++ b/main/templates/peeling/aqua.html
@@ -6,11 +6,11 @@
 {% endblock %}
 
 {% block sub_title %}
-필링/재생
+HOME > 필링/재생 > 아쿠아필
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/peeling/aqua1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/peeling/aqua1.jpg' %}" class="img-responsive">
 {% endblock %}
 
 {% block mainsm %}
@@ -19,7 +19,7 @@
 
 
 {% block detail %}
-	<img src="{% static 'img/peeling/aqua2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/peeling/aqua2.jpg' %}" class="img-responsive">
 {% endblock %}
 
 {% block detailsm %}
