--- a/main/templates/scar/tera.html
+++ b/main/templates/scar/tera.html
@@ -10,7 +10,7 @@ HOME > 흉터/모공/튼살 > 테라필
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/scar/tera1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/scar/tera1.jpg' %}" class="img-responsive">
 {% endblock %}
 
 {% block mainsm %}
@@ -19,7 +19,7 @@ HOME > 흉터/모공/튼살 > 테라필
 
 
 {% block detail %}
-	<img src="{% static 'img/scar/tera2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/scar/tera2.jpg' %}" class="img-responsive">
 {% endblock %}
 
 {% block detailsm %}
