사진 마진 수정

--- a/main/templates/peeling/spectra.html
+++ b/main/templates/peeling/spectra.html
@@ -10,7 +10,7 @@ HOME > 필링/재생 > 스펙트라필
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/peeling/spectra1.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/peeling/spectra1.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block mainsm %}
@@ -19,7 +19,7 @@ HOME > 필링/재생 > 스펙트라필
 
 
 {% block detail %}
-	<img src="{% static 'img/peeling/spectra2.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/peeling/spectra2.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block detailsm %}
