사진 다~ 넣었~다~ 룰~루~

--- a/main/templates/scar/legato.html
+++ b/main/templates/scar/legato.html
@@ -10,7 +10,7 @@ HOME > 흉터/모공/튼살 > 레가토
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/scar/legato1.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/scar/legato1.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block mainsm %}
@@ -19,7 +19,7 @@ HOME > 흉터/모공/튼살 > 레가토
 
 
 {% block detail %}
-	<img src="{% static 'img/scar/legato2.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/scar/legato2.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block detailsm %}
