--- a/main/templates/peeling/celebrity.html
+++ b/main/templates/peeling/celebrity.html
@@ -10,7 +10,7 @@ HOME > 필링/재생 > 연예인
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/peeling/celebrity1.jpg' %}" class="img-responsive" >
+	<img src="{% static 'img/peeling/celebrity1.jpg' %}" class="img-responsive minmax" >
 {% endblock %}
 
 {% block mainsm %}
@@ -19,7 +19,7 @@ HOME > 필링/재생 > 연예인
 
 
 {% block detail %}
-	<img src="{% static 'img/peeling/celebrity2.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/peeling/celebrity2.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block detailsm %}
