--- a/main/templates/scar/prp.html
+++ b/main/templates/scar/prp.html
@@ -10,7 +10,7 @@ HOME > 흉터/모공/튼살 > PRP
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/scar/prp1.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/scar/prp1.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block mainsm %}
@@ -19,7 +19,7 @@ HOME > 흉터/모공/튼살 > PRP
 
 
 {% block detail %}
-	<img src="{% static 'img/scar/prp2.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/scar/prp2.jpg' %}" class="img-responsive minmax">
 {% endblock %}
 
 {% block detailsm %}
