--- a/main/templates/scar/legato.html
+++ b/main/templates/scar/legato.html
@@ -12,7 +12,7 @@
 		</div>
 	</div>
 
-	<div class="col-lg-28 col-lg-offset-7 col-sm-38 col-sm-offset-2 col-xs-42 content-border marginb60">
+	<div class="col-sm-38 col-sm-offset-2 col-xs-42 content-border marginb60">
 		<div class="row hidden-xs margintop60 marginb60">
 		<img src="{% static 'img/scar/legato1.jpg' %}" class="img-responsive">
 		</div>
