--- a/main/templates/scar/legato.html
+++ b/main/templates/scar/legato.html
@@ -12,18 +12,18 @@
 		</div>
 	</div>
 
-	<div class="col-sm-38 col-sm-offset-2 col-xs-42 content-border marginb60">
-		<div class="row hidden-xs margintop60 marginb60">
-		<img src="{% static 'img/scar/legato1.jpg' %}" class="img-responsive">
+	<div class="col-sm-38 col-sm-offset-2 col-xs-42">
+		<div class="row hidden-xs">
+		<img src="{% static 'img/scar/legato1.jpg' %}" class="img-responsive content-border1 paddingtop60">
 		</div>
-		<div class="row visible-xs margintop30-xs marginb15">
-		<img src="{% static 'img/scar/legato1s.jpg' %}" class="img-responsive">
+		<div class="row visible-xs">
+		<img src="{% static 'img/scar/legato1s.jpg' %}" class="img-responsive paddingtop30-xs">
 		</div>
-		<div class="row hidden-xs margintop60 ">
-		<img src="{% static 'img/scar/legato2.jpg' %}" class="img-responsive">
+		<div class="row hidden-xs marginbottom60">
+		<img src="{% static 'img/scar/legato2.jpg' %}" class="img-responsive content-border2 paddingtop60 ">
 		</div>
-		<div class="row visible-xs margintop20-xs">
-		<img src="{% static 'img/scar/legato2s.jpg' %}" class="img-responsive">
+		<div class="row visible-xs">
+		<img src="{% static 'img/scar/legato2s.jpg' %}" class="img-responsive paddingtop20-xs">
 		</div>
 
 	</div>
