사진 안 깨지게 보더 만들기 1차 수정

--- a/main/templates/detailpage.html
+++ b/main/templates/detailpage.html
@@ -11,20 +11,20 @@
 		</div>
 	</div>
 
-	<div class="col-lg-38 col-lg-offset-2 col-sm-38 col-sm-offset-2 col-xs-42 content-border marginb60">
-		<div class="row hidden-xs margintop60 marginb60">
+	<div class="col-sm-38 col-sm-offset-2 col-xs-42 margintop30">
+		<div class="row hidden-xs">
 		{% block main %} {% endblock %}
 		</div>
-		<div class="row visible-xs margintop30-xs marginb15">
+		<div class="row visible-xs">
 		{% block mainsm %} {% endblock %}
 		</div>
-		<div class="row margintop30 marginb30">
+		<div class="row margintop30">
 		{% block common %} {% endblock %}
 		</div>
-		<div class="row hidden-xs margintop60 ">
+		<div class="row hidden-xs marginbottom60">
 		{% block detail %} {% endblock %}
 		</div>
-		<div class="row visible-xs margintop20-xs">
+		<div class="row visible-xs marginbottom60">
 		{% block detailsm %} {% endblock %}
 		</div>
 
