--- a/main/templates/peeling/celebrity.html
+++ b/main/templates/peeling/celebrity.html
@@ -10,18 +10,18 @@ HOME > 필링/재생 > 연예인
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/peeling/celebrity1.jpg' %}" class="img-responsive minmax" >
+	<img src="{% static 'img/peeling/celebrity1.jpg' %}" class="img-responsive content-border1 paddingtop60" >
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/peeling/celebrity1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/peeling/celebrity1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 
 {% block detail %}
-	<img src="{% static 'img/peeling/celebrity2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/peeling/celebrity2.jpg' %}" class="img-responsive content-border2 paddingtop60 ">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/peeling/celebrity2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/peeling/celebrity2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
