--- a/main/templates/whitening/whitening.html
+++ b/main/templates/whitening/whitening.html
@@ -10,17 +10,17 @@
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/whitening/legato1.jpeg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/whitening/legato1.jpeg' %}" class="img-responsive img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/whitening/legato1s.jpeg' %}" class="img-responsive">
+	<img src="{% static 'img/whitening/legato1s.jpeg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 {% block detail %}
-	<img src="{% static 'img/whitening/legato2.jpeg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/whitening/legato2.jpeg' %}" class="img-responsive content-border2 paddingtop60 ">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/whitening/legato2s.jpeg' %}" class="img-responsive">
+	<img src="{% static 'img/whitening/legato2s.jpeg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
