--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,9 @@ html, body {
 .margintop30 {
   margin-top: 30px; }
 
+.margintop30 {
+  margin-top: 30px; }
+
 .margintop50 {
   margin-top: 50px; }
 
