--- a/main/templates/peeling/aqua.html
+++ b/main/templates/peeling/aqua.html
@@ -10,18 +10,18 @@ HOME > 필링/재생 > 아쿠아필
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/peeling/aqua1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/peeling/aqua1.jpg' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/peeling/aqua1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/peeling/aqua1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 
 {% block detail %}
-	<img src="{% static 'img/peeling/aqua2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/peeling/aqua2.jpg' %}" class="img-responsive content-border2 paddingtop60">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/peeling/aqua2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/peeling/aqua2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
