--- a/main/templates/peeling/spectra.html
+++ b/main/templates/peeling/spectra.html
@@ -10,18 +10,18 @@ HOME > 필링/재생 > 스펙트라필
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/peeling/spectra1.png' %}" class="img-responsive minmax">
+	<img src="{% static 'img/peeling/spectra1.png' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/peeling/spectra1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/peeling/spectra1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 
 {% block detail %}
-	<img src="{% static 'img/peeling/spectra2.png' %}" class="img-responsive minmax">
+	<img src="{% static 'img/peeling/spectra2.png' %}" class="img-responsive content-border2 paddingtop60 ">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/peeling/spectra2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/peeling/spectra2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
