--- a/main/templates/pimple/pimple.html
+++ b/main/templates/pimple/pimple.html
@@ -10,18 +10,18 @@ HOME > 여드름
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/pimple/pimple1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/pimple/pimple1.jpg' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/pimple/pimple1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/pimple/pimple1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 
 {% block detail %}
-	<img src="{% static 'img/pimple/pimple2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/pimple/pimple2.jpg' %}" class="img-responsive  content-border2 paddingtop60 ">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/pimple/pimple2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/pimple/pimple2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
