--- a/main/templates/scar/tera.html
+++ b/main/templates/scar/tera.html
@@ -10,18 +10,18 @@ HOME > 흉터/모공/튼살 > 테라필
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/scar/tera1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/scar/tera1.jpg' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/scar/tera1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/scar/tera1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 
 {% block detail %}
-	<img src="{% static 'img/scar/tera2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/scar/tera2.jpg' %}" class="img-responsive content-border2 paddingtop60 ">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/scar/tera2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/scar/tera2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
