--- a/main/templates/whitening/jade.html
+++ b/main/templates/whitening/jade.html
@@ -10,18 +10,18 @@
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/whitening/jade1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/whitening/jade1.jpg' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/whitening/jade1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/whitening/jade1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 
 {% block detail %}
-	<img src="{% static 'img/whitening/jade2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/whitening/jade2.jpg' %}" class="img-responsive content-border2 paddingtop60 ">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/whitening/jade2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/whitening/jade2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
