--- a/main/templates/whitening/laser.html
+++ b/main/templates/whitening/laser.html
@@ -10,17 +10,17 @@
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/whitening/laser1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/whitening/laser1.jpg' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/whitening/laser1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/whitening/laser1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 {% block detail %}
-	<img src="{% static 'img/whitening/laser2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/whitening/laser2.jpg' %}" class="img-responsive content-border2 paddingtop60 ">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/whitening/laser2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/whitening/laser2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
