--- a/main/templates/obesity/mesotherapie.html
+++ b/main/templates/obesity/mesotherapie.html
@@ -10,18 +10,18 @@ HOME > 비만/체형관리 > 파워메조테라피
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/obesity/mesotherapie1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/obesity/mesotherapie1.jpg' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/obesity/mesotherapie1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/obesity/mesotherapie1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 
 {% block detail %}
-	<img src="{% static 'img/obesity/mesotherapie2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/obesity/mesotherapie2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/obesity/mesotherapie2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/obesity/mesotherapie2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
