--- a/main/templates/peeling/aqua.html
+++ b/main/templates/peeling/aqua.html
@@ -19,7 +19,7 @@ HOME > 필링/재생 > 아쿠아필
 
 
 {% block detail %}
-	<img src="{% static 'img/peeling/aqua2.jpg' %}" class="img-responsive content-border2 paddingtop60">
+	<img src="{% static 'img/peeling/aqua2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
