--- a/main/templates/peeling/latte.html
+++ b/main/templates/peeling/latte.html
@@ -19,7 +19,7 @@ HOME > 필링/재생 > 라떼필
 
 
 {% block detail %}
-	<img src="{% static 'img/peeling/latte2.jpg' %}" class="img-responsive content-border2 paddingtop60">
+	<img src="{% static 'img/peeling/latte2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
