--- a/main/templates/scar/legato.html
+++ b/main/templates/scar/legato.html
@@ -20,7 +20,7 @@
 		<img src="{% static 'img/scar/legato1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 		</div>
 		<div class="row hidden-xs marginbottom60">
-		<img src="{% static 'img/scar/legato2.jpg' %}" class="img-responsive content-border2 paddingtop60 ">
+		<img src="{% static 'img/scar/legato2.jpg' %}" class="img-responsive content-border2">
 		</div>
 		<div class="row visible-xs marginbottom60">
 		<img src="{% static 'img/scar/legato2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
