--- a/main/templates/scar/tera.html
+++ b/main/templates/scar/tera.html
@@ -19,7 +19,7 @@ HOME > 흉터/모공/튼살 > 테라필
 
 
 {% block detail %}
-	<img src="{% static 'img/scar/tera2.jpg' %}" class="img-responsive content-border2 paddingtop60 ">
+	<img src="{% static 'img/scar/tera2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
