--- a/main/templates/whitening/jade.html
+++ b/main/templates/whitening/jade.html
@@ -19,7 +19,7 @@
 
 
 {% block detail %}
-	<img src="{% static 'img/whitening/jade2.jpg' %}" class="img-responsive content-border2 paddingtop60 ">
+	<img src="{% static 'img/whitening/jade2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
