--- a/main/templates/whitening/laser.html
+++ b/main/templates/whitening/laser.html
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block detail %}
-	<img src="{% static 'img/whitening/laser2.jpg' %}" class="img-responsive content-border2 paddingtop60 ">
+	<img src="{% static 'img/whitening/laser2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
