--- a/main/templates/botox/filler.html
+++ b/main/templates/botox/filler.html
@@ -10,18 +10,18 @@ HOME > 보톡스/필러 > 필러
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/botox/filler1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/botox/filler1.jpg' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/botox/filler1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/botox/filler1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 
 {% block detail %}
-	<img src="{% static 'img/botox/filler2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/botox/filler2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/botox/filler2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/botox/filler2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
