--- a/main/templates/obesity/cinderella.html
+++ b/main/templates/obesity/cinderella.html
@@ -10,18 +10,18 @@ HOME > 비만/체형관리 > 신데렐라 주사
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/obesity/cinderella1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/obesity/cinderella1.jpg' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/obesity/cinderella1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/obesity/cinderella1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 
 {% block detail %}
-	<img src="{% static 'img/obesity/cinderella2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/obesity/cinderella2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/obesity/cinderella2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/obesity/cinderella2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
