--- a/main/templates/obesity/slim.html
+++ b/main/templates/obesity/slim.html
@@ -10,18 +10,18 @@ HOME > 비만/체형관리 > 슬림주사
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/obesity/slim1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/obesity/slim1.jpg' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/obesity/slim1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/obesity/slim1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 
 {% block detail %}
-	<img src="{% static 'img/obesity/slim2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/obesity/slim2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/obesity/slim2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/obesity/slim2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
