--- a/main/templates/peeling/celebrity.html
+++ b/main/templates/peeling/celebrity.html
@@ -19,7 +19,7 @@ HOME > 필링/재생 > 연예인
 
 
 {% block detail %}
-	<img src="{% static 'img/peeling/celebrity2.jpg' %}" class="img-responsive content-border2 paddingtop60 ">
+	<img src="{% static 'img/peeling/celebrity2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
