--- a/main/templates/petit/darkcircle.html
+++ b/main/templates/petit/darkcircle.html
@@ -10,18 +10,18 @@ HOME > 쁘띠/동안 > 다크서클
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/petit/darkcircle1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/petit/darkcircle1.jpg' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/petit/darkcircle1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/petit/darkcircle1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 
 {% block detail %}
-	<img src="{% static 'img/petit/darkcircle2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/petit/darkcircle2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/petit/darkcircle2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/petit/darkcircle2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
