--- a/main/templates/petit/kotppol.html
+++ b/main/templates/petit/kotppol.html
@@ -10,18 +10,18 @@ HOME > 쁘띠/동안 > 콧볼축소
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/petit/kotppol1.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/petit/kotppol1.jpg' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/petit/kotppol1s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/petit/kotppol1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 
 {% block detail %}
-	<img src="{% static 'img/petit/kotppol2.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/petit/kotppol2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/petit/kotppol2s.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/petit/kotppol2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
