--- a/main/templates/pimple/pimple.html
+++ b/main/templates/pimple/pimple.html
@@ -19,7 +19,7 @@ HOME > 여드름
 
 
 {% block detail %}
-	<img src="{% static 'img/pimple/pimple2.jpg' %}" class="img-responsive  content-border2 paddingtop60 ">
+	<img src="{% static 'img/pimple/pimple2.jpg' %}" class="img-responsive  content-border2">
 {% endblock %}
 
 {% block detailsm %}
