--- a/main/templates/scar/prp.html
+++ b/main/templates/scar/prp.html
@@ -19,7 +19,7 @@ HOME > 흉터/모공/튼살 > PRP
 
 
 {% block detail %}
-	<img src="{% static 'img/scar/prp2.jpg' %}" class="img-responsive content-border2 paddingtop60">
+	<img src="{% static 'img/scar/prp2.jpg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
