--- a/main/templates/whitening/whitening.html
+++ b/main/templates/whitening/whitening.html
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block detail %}
-	<img src="{% static 'img/whitening/legato2.jpeg' %}" class="img-responsive content-border2 paddingtop60 ">
+	<img src="{% static 'img/whitening/legato2.jpeg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
