--- a/suclinic/templates/base.html
+++ b/suclinic/templates/base.html
@@ -22,10 +22,10 @@
 
 	<body>
 
-		{% include "left.navbar.html" %}
+		{% include "left.navbar.1.html" %}
 
 
-		<div class="col-md-35 no-padding">
+		<div class="base-center no-padding">
 			{% block content %}
 			{% endblock %}
 			{% include "footer.html" %}
