--- a/suclinic/templates/right.navbar.html
+++ b/suclinic/templates/right.navbar.html
@@ -1,10 +1,9 @@
 {% load staticfiles %}
 
-		<div class="col-md-2 hidden-xs hidden-sm">
-			<nav class="navbar navbar-default navbar-fixed-side right-side text-center">
+		<div class="right-navbar hidden-xs hidden-sm">
+			<nav class="navbar navbar-default navbar-fixed-side right-side text-center" style="overflow: hidden;">
 				<div class="container">
 					<div class="collapse navbar-collapse">
-
 						<ul class="nav navbar-nav">
 						<li style="margin-top: 20px;"><a href="#" id="top"><img src="{% static 'img/right_top.png' %}" class="img-responsive"></a></li>
 						<li style="color: white;"><a href="#">JOIN</a></li>
